// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the server returns 200 code renders 1`] = `
"<div className=\\"ArticleViewer\\">
  <p>
    We have 
    5
     Articles
  </p>
  <Article articleID=\\"article1.json\\" />
</div>"
`;

exports[`the server returns 500 error renders 1`] = `
"<div className=\\"ArticleViewer\\">
  <p>
    We have 
    0
     Articles
  </p>
</div>"
`;
